# dakota-jazz-calendar

./: .gitignore  README.md  pyproject.toml  schema.sql
scraper/: __init__.py  cli.py  config.py  db.py  http_client.py  models.py  parser.py  runner.py
scripts/: run_daily.sh
tests/: test_db.py  test_packaging.py  test_parser.py  test_runner.py
tests/fixtures/: event_detail_elementor.html  event_detail_jane.html  event_detail_jsonld.html  event_detail_showtimes.html  month_2026_03.html
